# collapse-it

./: .gitignore  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
.github/: dependabot.yml
src/: app.py
src/extensions/: database.py  shortened_url.py
